--- a/ShoppingApp/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Base.lproj/Main.storyboard
@@ -1,24 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Q6G-EJ-kEM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Alınacaklar Listesi-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Csh-9c-Pnm">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.020800241690251617" green="0.43787558489539424" blue="0.61647790670394897" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Csh-9c-Pnm" secondAttribute="trailing" id="4NC-MI-t5i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Csh-9c-Pnm" secondAttribute="bottom" id="AcM-ab-dw4"/>
+                            <constraint firstItem="Csh-9c-Pnm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JSC-S8-9GS"/>
+                            <constraint firstItem="Csh-9c-Pnm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="VV2-MK-Stl"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Alınacaklar Listesi" id="hvu-Vz-FCk"/>
+                    <connections>
+                        <outlet property="tableView" destination="Csh-9c-Pnm" id="MzT-7c-QL5"/>
+                        <segue destination="LVc-Gu-g0G" kind="show" identifier="addShopItem" id="tys-AG-4Tu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="488" y="84"/>
+        </scene>
+        <!--Add Item View Controller-->
+        <scene sceneID="4dc-Ms-gF7">
+            <objects>
+                <viewController id="LVc-Gu-g0G" customClass="AddItemViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Lqd-Km-0Py">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="click" translatesAutoresizingMaskIntoConstraints="NO" id="Px2-fV-Xyx">
+                                <rect key="frame" x="38" y="107" width="338" height="176"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Adı" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WFS-iK-gSe">
+                                <rect key="frame" x="38" y="331" width="338" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="28a-eO-OeG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Fiyatı" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MKA-Vu-lKB">
+                                <rect key="frame" x="38" y="391" width="338" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="hOa-D3-CnE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ürün Bedeni" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wrP-F0-cNE">
+                                <rect key="frame" x="38" y="452" width="338" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="8DN-UD-oAE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="89V-7I-Lxl">
+                                <rect key="frame" x="0.0" y="537" width="414" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="162" id="l8S-29-zjd"/>
+                                </constraints>
+                                <date key="minimumDate" timeIntervalSinceReferenceDate="662724000">
+                                    <!--2022-01-01 10:00:00 +0000-->
+                                </date>
+                                <locale key="locale" localeIdentifier="tr"/>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="di1-a2-Jx3">
+                                <rect key="frame" x="145" y="773" width="125" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="Hx0-s3-cQu"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Ürünü Kaydet"/>
+                                <connections>
+                                    <action selector="saveItemButton:" destination="LVc-Gu-g0G" eventType="touchUpInside" id="6uZ-sF-r2M"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ne Zaman Alınacak?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHP-eQ-ZXd">
+                                <rect key="frame" x="79" y="508" width="243" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="bZ2-9I-hmq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="G0i-Uh-vwU"/>
+                        <color key="backgroundColor" red="0.020800241689999999" green="0.4378755849" blue="0.61647790670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.56656733247422686" green="0.0" blue="0.50863226646501258" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="di1-a2-Jx3" firstAttribute="leading" secondItem="G0i-Uh-vwU" secondAttribute="leading" constant="145" id="2Jg-GK-MYZ"/>
+                            <constraint firstItem="G0i-Uh-vwU" firstAttribute="bottom" secondItem="di1-a2-Jx3" secondAttribute="bottom" constant="43" id="2Za-50-cYr"/>
+                            <constraint firstItem="Px2-fV-Xyx" firstAttribute="top" secondItem="G0i-Uh-vwU" secondAttribute="top" constant="19" id="5I4-lv-GAz"/>
+                            <constraint firstItem="di1-a2-Jx3" firstAttribute="top" secondItem="89V-7I-Lxl" secondAttribute="bottom" constant="74" id="5zk-lr-y28"/>
+                            <constraint firstItem="89V-7I-Lxl" firstAttribute="top" secondItem="gHP-eQ-ZXd" secondAttribute="bottom" constant="8" id="CLw-V7-jfG"/>
+                            <constraint firstItem="wrP-F0-cNE" firstAttribute="top" secondItem="MKA-Vu-lKB" secondAttribute="bottom" constant="27" id="D5h-b9-6nj"/>
+                            <constraint firstItem="WFS-iK-gSe" firstAttribute="trailing" secondItem="MKA-Vu-lKB" secondAttribute="trailing" id="Dd6-1i-fcy"/>
+                            <constraint firstItem="MKA-Vu-lKB" firstAttribute="leading" secondItem="wrP-F0-cNE" secondAttribute="leading" id="FwR-Ca-J0h"/>
+                            <constraint firstItem="gHP-eQ-ZXd" firstAttribute="centerX" secondItem="89V-7I-Lxl" secondAttribute="centerX" constant="-6.5" id="P3S-db-4zd"/>
+                            <constraint firstItem="89V-7I-Lxl" firstAttribute="centerX" secondItem="di1-a2-Jx3" secondAttribute="centerX" id="X7V-Xy-VMf"/>
+                            <constraint firstItem="wrP-F0-cNE" firstAttribute="centerX" secondItem="gHP-eQ-ZXd" secondAttribute="centerX" constant="6.5" id="Xba-ql-IXN"/>
+                            <constraint firstItem="Px2-fV-Xyx" firstAttribute="centerX" secondItem="Lqd-Km-0Py" secondAttribute="centerX" id="fEt-tI-1DX"/>
+                            <constraint firstItem="Px2-fV-Xyx" firstAttribute="trailing" secondItem="WFS-iK-gSe" secondAttribute="trailing" id="gN5-c8-Cdc"/>
+                            <constraint firstItem="gHP-eQ-ZXd" firstAttribute="top" secondItem="wrP-F0-cNE" secondAttribute="bottom" constant="22" id="goL-dH-U4h"/>
+                            <constraint firstItem="Px2-fV-Xyx" firstAttribute="leading" secondItem="G0i-Uh-vwU" secondAttribute="leading" constant="38" id="hMC-F4-aIG"/>
+                            <constraint firstItem="WFS-iK-gSe" firstAttribute="leading" secondItem="MKA-Vu-lKB" secondAttribute="leading" id="hVj-ic-X93"/>
+                            <constraint firstItem="gHP-eQ-ZXd" firstAttribute="leading" secondItem="G0i-Uh-vwU" secondAttribute="leading" constant="79" id="hyW-el-Zb5"/>
+                            <constraint firstItem="89V-7I-Lxl" firstAttribute="leading" secondItem="G0i-Uh-vwU" secondAttribute="leading" id="kNT-65-8EC"/>
+                            <constraint firstItem="WFS-iK-gSe" firstAttribute="top" secondItem="Px2-fV-Xyx" secondAttribute="bottom" constant="48" id="lOQ-bV-wii"/>
+                            <constraint firstItem="Px2-fV-Xyx" firstAttribute="leading" secondItem="WFS-iK-gSe" secondAttribute="leading" id="o29-WW-pYy"/>
+                            <constraint firstItem="MKA-Vu-lKB" firstAttribute="top" secondItem="WFS-iK-gSe" secondAttribute="bottom" constant="26" id="qQk-S5-EPF"/>
+                            <constraint firstItem="MKA-Vu-lKB" firstAttribute="trailing" secondItem="wrP-F0-cNE" secondAttribute="trailing" id="yU4-ns-qXK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="riQ-lT-Bqm"/>
+                    <connections>
+                        <outlet property="imageView" destination="Px2-fV-Xyx" id="Yj1-Ve-w0x"/>
+                        <outlet property="urunAdiText" destination="WFS-iK-gSe" id="Nzf-KN-GXt"/>
+                        <outlet property="urunDatePicker" destination="89V-7I-Lxl" id="7S4-eq-Mse"/>
+                        <outlet property="urunFiyatiText" destination="MKA-Vu-lKB" id="ngD-bx-MZl"/>
+                        <outlet property="urunSizeText" destination="wrP-F0-cNE" id="kP3-BK-fpd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Le3-Pu-vyD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1286.9565217391305" y="84.375"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BcC-8N-HF0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q6G-EJ-kEM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QKh-uf-5Wv">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="C79-f7-Inx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="07m-5h-7CE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-226" y="84"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="click" width="1300" height="1300"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
